[package]
name = "vimba-sys"
description = "Rust wrapper of the Vimba library for Allied Vision cameras"
license = "MIT OR Apache-2.0"
version = "0.1.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/strawlab/vimba-sys"
keywords = ["allied-vision", "camera", "bindings", "vimba", "image"]
categories = ["api-bindings", "external-ffi-bindings", "hardware-support", "multimedia::images"]

[dependencies]

[dev-dependencies]
anyhow = "1"
