[package]
name = "vmbc-sys"
description = "Rust wrapper of the Vimba X library for Allied Vision cameras"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/strawlab/vmbc-sys"
keywords = ["allied-vision", "camera", "bindings", "vimba", "image"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "hardware-support",
    "multimedia::images",
]

[dependencies]
libloading = "0.8.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = ["Win32_System_LibraryLoader"] }

[dev-dependencies]
anyhow = "1"
